[package]
name = "tonytools-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bimap = "0.6.3"
crc32fast = "1.4.0"
once_cell = "1.19.0"
num = "0.4.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.114", features = ["preserve_order"] }
extended-tea = "0.1.1"
byteorder = "1.5.0"
indexmap = "2.2.5"
fancy-regex = "0.13.0"
md5 = "0.7.0"
intel_tex_2 = "0.3.0"
texture2ddecoder = "0.0.5"
lz4_flex = "0.11.2"
