[package]
name = "tonytools"
description = "A library for handling certain Glacier 2 formats."
homepage = "https://tonytools.win"
repository = "https://github.com/AnthonyFuller/tonytools-rs"
keywords = ["glacier", "hitman"]
authors = ["Anthony Fuller", "KingPEPSALT"]
license = "LGPL-3.0-only"
readme = "README.md"
version = "0.5.3"
exclude = [".vscode/**", ".gitignore"]
edition = "2021"

[features]
tools = []

[[bin]]
name = "hmlanguagetools-rs"
required-features = ["tools"]
path = "src/hmlanguagetools/bin.rs"

[dependencies]
bimap = "0.6.3"
crc32fast = "1.4.0"
once_cell = "1.19.0"
num = "0.4.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.114", features = ["preserve_order"] }
extended-tea = "0.1.1"
byteorder = "1.5.0"
indexmap = "2.2.5"
fancy-regex = "0.13.0"
md5 = "0.7.0"
lz4_flex = "0.11.2"
bitchomp = "0.3.1"
strum_macros = "0.26.2"
clap = { version = "4.5.4", features = ["derive"] }
glob = "0.3.1"
thiserror = "2.0.11"
