[package]
name = "tonytools"
description = "A library for handling certain Glacier 2 formats."
homepage = "https://tonytools.win"
repository = "https://github.com/AnthonyFuller/tonytools-rs"
keywords = ["glacier", "hitman"]
authors = ["Anthony Fuller", "KingPEPSALT", "Reece Dunham"]
license = "LGPL-3.0-only"
readme = "README.md"
version = "0.7.1"
exclude = [".vscode/**", ".gitignore"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true

[features]
tools = ["clap", "glob"]
wasm = ["wasm-bindgen", "console_error_panic_hook"]
default = []

[[bin]]
name = "hmlanguagetools-rs"
required-features = ["tools"]
path = "src/hmlanguagetools/bin.rs"

[dependencies]
bimap = "0.6.3"
crc32fast = "1.4.0"
once_cell = "1.19.0"
regex-lite = "0.1.7"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.114", features = ["preserve_order"] }
extended-tea = "0.1.1"
byteorder = "1.5.0"
indexmap = "2.2.5"
md5 = "0.8.0"
bitchomp = "0.3.1"
strum_macros = "0.27.2"
clap = { version = "4.5.4", features = ["derive"], optional = true }
glob = { version = "0.3.1", optional = true }
thiserror = "2.0.11"
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
